# django

./: .gitignore  .isort.cfg  docker-compose.yml
.github/workflow/: prod.yml
src/: entrypoint.sh  pyproject.toml
src/config/: .env  settings.py  settings_local.py  settings_prod.py  urls.py
src/docker/: Dockerfile
